--- a/index.html
+++ b/index.html
@@ -43,6 +43,38 @@
         </div>
        
       </section>
+
+      <section id="devtools-js-demo">
+  <h2>DevTools JavaScript Debugging Demo</h2>
+  <p>Use this mini calculator to test JavaScript debugging in Chrome DevTools.</p>
+
+  <label>
+    Number 1:
+    <input id="num1" type="text">
+  </label>
+
+  <label>
+    Number 2:
+    <input id="num2" type="text">
+  </label>
+
+  <button id="add-btn">Add Numbers</button>
+
+  <p id="add-result">Result will appear here.</p>
+</section>
+
+<section id="devtools-dom-demo">
+  <h2>DevTools DOM Demo</h2>
+  <p>Favorite players:</p>
+  <ul id="player-list">
+    <li>Connor Bedard</li>
+    <li>Leon Draisaitl</li>
+    <li>Nathan MacKinnon</li>
+    <li>Cale Makar</li>
+  </ul>
+</section>
+
+
     </main>
 
     <!-- Your web-app is https, so your scripts need to be too -->
